<resources>
    <string name="app_name">Scrsorter</string>
    <string name="start_listactivity">Start ListActivity</string>
    <string name="loremipsum">Lorem Ipsum</string>
    <string name="example_button">example button</string>
    <string name="editable_text">editable text</string>
    <string name="todo">TODO</string>
    <string name="start_frameactivity">start frameactivity</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_text_1">show text 1</string>
    <string name="show_text_3">show text 3</string>
    <string name="show_text_2">show text 2</string>
    <string name="start_recyclerview">start recyclerview</string>
    <string name="browse">Browse</string>
    <string name="backup">Backup</string>
    <string name="delete">Delete</string>
    <string name="start_app">start app</string>
    <string name="title_activity_app">AppActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="notification_period">Notification period</string>
    <string name="notification_time">Notification time</string>
    <string name="photos_to_show">Photos to show</string>
    <string name="folders_to_track">Folders to track</string>
    <string name="amount_tooltip">Amount of suggested untagged photos in each notification</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="backup_all_tagged">Backup all tagged</string>
    <string name="delete_all_backed">Delete all backed</string>
    <string name="folders_text">Folders to track</string>
    <string name="placeholder_category">Placeholder category</string>
    <string name="search_category_hint">Search category</string>
    <string name="add_category">Add category</string>
    <string name="test_notification_devmode">Test notification (devmode)</string>
    <string name="channel_name">notif_channel</string>
    <string name="apply">Apply</string>
    <string name="additional_tags">Additional tags:</string>
    <string name="select_category">Select category:</string>
    <string name="choose">Choose</string>
    <string name="tag">Tag</string>
    <string name="hello_addition">Hello category addition fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="backup_button_key">backup_button_key</string>
    <string name="delete_button_key">delete_button_key</string>
    <string name="mediastore_version_key">mediastore_version_key</string>
    <string name="scan_path">scan_path</string>
    <string name="send_markup_notification">Send markup notification</string>

</resources>