<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="@string/loremipsum"
            android:layout_margin="20sp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="@string/editable_text"
            android:labelFor="@+id/edit_text"
            android:layout_margin="20sp"
            />

        <EditText
             android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:autofillHints="Placeholder"
            android:inputType="text"
            android:id="@+id/exit_text"
            android:layout_margin="20sp"
            tools:ignore="LabelFor" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/app_name"
            android:textSize="20sp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/app_name"
            android:textSize="20sp"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/app_name"
            android:textSize="20sp"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:textSize="20sp"
            android:id="@+id/planets_spinner"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_button"
            android:layout_gravity="center"
            />

        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/example_button"
            android:contentDescription="@string/todo"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>


    </LinearLayout>

</ScrollView>