<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.markup.MarkupObjectFragment">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_end"
        app:layout_constraintGuide_end="@dimen/activity_horizontal_margin"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_start"
        app:layout_constraintGuide_begin="@dimen/activity_horizontal_margin"
        android:orientation="vertical"/>

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/main_button"
        android:contentDescription="@string/todo"
        android:src="@drawable/no_mlny"/>

    <TextView
        android:id="@+id/main_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:text="@string/select_category"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/main_button"
        app:layout_constraintBottom_toBottomOf="@id/main_button"
        app:layout_constraintTop_toTopOf="@id/main_button"
        />


    <Spinner
        android:id="@+id/main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/add_button"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:text="@string/choose"
        />

    <TextView
        android:id="@+id/add_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:text="@string/additional_tags"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/add_button"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/add_button" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_height"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/tags_flow"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:text="@string/choose"

        />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/tags_flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_vertical_margin"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/apply_button"
        app:constraint_referenced_ids="todo_1,todo_2,todo_3">

    </androidx.constraintlayout.helper.widget.Flow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:id="@+id/todo_1"
        android:backgroundTint="@color/gray"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:id="@+id/todo_2"
        android:backgroundTint="@color/gray"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:backgroundTint="@color/gray"
        android:id="@+id/todo_3"
        />

    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/text1"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:text="@string/apply"

        />

    <TextView
        android:visibility="gone"
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:layout_marginTop="@dimen/item_vertical_margin"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>