<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/listbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onLBtnClick"
        android:text="@string/start_listactivity"
        app:layout_constraintBottom_toTopOf="@id/framebutton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

    </Button>

    <Button
        android:id="@+id/framebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onFBtnClick"
        android:text="@string/start_frameactivity"
        app:layout_constraintTop_toBottomOf="@id/listbutton"
        app:layout_constraintBottom_toTopOf="@id/recyclerbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <Button
        android:id="@+id/recyclerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRBtnClick"
        android:text="@string/start_recyclerview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/framebutton"
        app:layout_constraintStart_toStartOf="parent">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>